--- a/DDAYGO/ViewController/My/Setting/ChangePassword/ResetPasswordViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/ChangePassword/ResetPasswordViewController.xib
@@ -34,9 +34,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入原有密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DEa-pl-ok6">
-                            <rect key="frame" x="105" y="87" width="205" height="25"/>
+                            <rect key="frame" x="105" y="82" width="205" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="25" id="blw-Mz-0Iv"/>
+                                <constraint firstAttribute="height" constant="30" id="blw-Mz-0Iv"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -56,9 +56,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s7I-ni-Y2i">
-                            <rect key="frame" x="105" y="137" width="205" height="25"/>
+                            <rect key="frame" x="105" y="132" width="205" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="25" id="MIU-6R-S9f"/>
+                                <constraint firstAttribute="height" constant="30" id="MIU-6R-S9f"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -78,9 +78,9 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q35-gy-pnv">
-                            <rect key="frame" x="105" y="193" width="205" height="25"/>
+                            <rect key="frame" x="105" y="188" width="205" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="25" id="JJc-hs-6Zw"/>
+                                <constraint firstAttribute="height" constant="30" id="JJc-hs-6Zw"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -123,19 +123,22 @@
                                     <integer key="value" value="5"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="DetermineBut:" destination="-1" eventType="touchUpInside" id="m3c-E4-XEZ"/>
+                            </connections>
                         </button>
                     </subviews>
                     <constraints>
                         <constraint firstItem="Viv-WD-9oE" firstAttribute="leading" secondItem="Xp2-pG-42t" secondAttribute="leading" id="4Ax-ci-FMg"/>
                         <constraint firstItem="ToX-ek-tM4" firstAttribute="leading" secondItem="VAk-lq-VP7" secondAttribute="leading" id="61g-Pg-Czh"/>
-                        <constraint firstItem="Q35-gy-pnv" firstAttribute="top" secondItem="Viv-WD-9oE" secondAttribute="bottom" constant="30" id="72D-SM-8z1"/>
+                        <constraint firstItem="Q35-gy-pnv" firstAttribute="top" secondItem="Viv-WD-9oE" secondAttribute="bottom" constant="25" id="72D-SM-8z1"/>
                         <constraint firstAttribute="trailing" secondItem="VAk-lq-VP7" secondAttribute="trailing" id="7iF-Ao-7Qg"/>
                         <constraint firstItem="bAm-gR-yLu" firstAttribute="centerX" secondItem="kS9-Qv-1yZ" secondAttribute="centerX" id="7yf-Wt-CVD"/>
                         <constraint firstItem="Viv-WD-9oE" firstAttribute="trailing" secondItem="6ND-Oq-2XJ" secondAttribute="trailing" id="8sY-LE-itD"/>
                         <constraint firstItem="Viv-WD-9oE" firstAttribute="top" secondItem="BCS-k8-ID2" secondAttribute="bottom" constant="17" id="ANK-tY-GlH"/>
                         <constraint firstItem="VAk-lq-VP7" firstAttribute="top" secondItem="DEa-pl-ok6" secondAttribute="bottom" id="DjC-ku-wib"/>
                         <constraint firstItem="chg-R9-Ydb" firstAttribute="leading" secondItem="6ND-Oq-2XJ" secondAttribute="leading" id="G8H-fo-TeS"/>
-                        <constraint firstItem="DEa-pl-ok6" firstAttribute="top" secondItem="kS9-Qv-1yZ" secondAttribute="top" constant="87" id="IaS-wz-9ua"/>
+                        <constraint firstItem="DEa-pl-ok6" firstAttribute="top" secondItem="kS9-Qv-1yZ" secondAttribute="top" constant="82" id="IaS-wz-9ua"/>
                         <constraint firstAttribute="bottom" secondItem="bAm-gR-yLu" secondAttribute="bottom" constant="218" id="Ioz-o6-xjR"/>
                         <constraint firstItem="6ND-Oq-2XJ" firstAttribute="top" secondItem="Q35-gy-pnv" secondAttribute="bottom" id="Irc-Mh-tlB"/>
                         <constraint firstItem="chg-R9-Ydb" firstAttribute="leading" secondItem="bAm-gR-yLu" secondAttribute="leading" id="Juv-xf-xpm"/>
@@ -159,7 +162,7 @@
                         <constraint firstItem="ToX-ek-tM4" firstAttribute="leading" secondItem="kS9-Qv-1yZ" secondAttribute="leading" constant="16" id="vcy-eP-apR"/>
                         <constraint firstItem="DEa-pl-ok6" firstAttribute="leading" secondItem="ToX-ek-tM4" secondAttribute="trailing" constant="12" id="yCK-9G-TXw"/>
                         <constraint firstItem="s7I-ni-Y2i" firstAttribute="leading" secondItem="Q35-gy-pnv" secondAttribute="leading" id="ydq-Qg-T8z"/>
-                        <constraint firstItem="s7I-ni-Y2i" firstAttribute="top" secondItem="VAk-lq-VP7" secondAttribute="bottom" constant="24" id="zVv-i1-LFI"/>
+                        <constraint firstItem="s7I-ni-Y2i" firstAttribute="top" secondItem="VAk-lq-VP7" secondAttribute="bottom" constant="19" id="zVv-i1-LFI"/>
                     </constraints>
                 </scrollView>
             </subviews>
