--- a/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
@@ -92,20 +92,21 @@
                             <constraint firstAttribute="width" constant="92" id="rRJ-0R-3XU"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ey6-EQ-Rg4">
-                        <rect key="frame" x="33" y="40" width="42" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ey6-EQ-Rg4">
+                        <rect key="frame" x="33" y="44" width="42" height="15"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="15" id="0Mb-R2-qoN"/>
-                            <constraint firstAttribute="width" constant="42" id="kGg-Ne-HXP"/>
+                            <constraint firstAttribute="height" constant="15" id="Syx-aY-psP"/>
+                            <constraint firstAttribute="width" constant="42" id="hzU-0e-R9W"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="nSL-kj-gLK" firstAttribute="top" secondItem="A0p-VQ-TKJ" secondAttribute="bottom" constant="26" id="0pi-rJ-mJ9"/>
                     <constraint firstItem="W1e-m4-kIK" firstAttribute="leading" secondItem="otV-Dq-b6g" secondAttribute="trailing" constant="45" id="13X-2B-SdL"/>
+                    <constraint firstItem="ey6-EQ-Rg4" firstAttribute="top" secondItem="sgc-ol-QRs" secondAttribute="topMargin" constant="33" id="67s-oT-VuC"/>
                     <constraint firstItem="UlF-Tk-dWI" firstAttribute="leading" secondItem="NhN-r3-pHL" secondAttribute="trailing" constant="8" id="6b5-rZ-4p1"/>
                     <constraint firstItem="yDF-sZ-3mY" firstAttribute="top" secondItem="UlF-Tk-dWI" secondAttribute="bottom" constant="2" id="AZt-sn-pwo"/>
                     <constraint firstItem="vFh-Ip-qIP" firstAttribute="centerY" secondItem="sgc-ol-QRs" secondAttribute="centerY" id="Aub-6k-91J"/>
@@ -114,7 +115,6 @@
                     <constraint firstAttribute="trailing" secondItem="UlF-Tk-dWI" secondAttribute="trailing" constant="10" id="CeT-Zk-tcj"/>
                     <constraint firstItem="NhN-r3-pHL" firstAttribute="leading" secondItem="sgc-ol-QRs" secondAttribute="leading" constant="8" id="HIj-mQ-kWf"/>
                     <constraint firstItem="UlF-Tk-dWI" firstAttribute="top" secondItem="sgc-ol-QRs" secondAttribute="top" constant="8" id="J88-R6-FRc"/>
-                    <constraint firstItem="ey6-EQ-Rg4" firstAttribute="top" secondItem="sgc-ol-QRs" secondAttribute="topMargin" constant="29" id="NTW-M1-W39"/>
                     <constraint firstItem="NhN-r3-pHL" firstAttribute="centerY" secondItem="sgc-ol-QRs" secondAttribute="centerY" id="Osb-Ee-97X"/>
                     <constraint firstItem="DYA-FP-Cd3" firstAttribute="top" secondItem="UlF-Tk-dWI" secondAttribute="bottom" constant="2" id="Q0z-YK-tfb"/>
                     <constraint firstItem="A0p-VQ-TKJ" firstAttribute="leading" secondItem="otV-Dq-b6g" secondAttribute="trailing" constant="-2" id="VKK-UT-x0w"/>
@@ -124,8 +124,8 @@
                     <constraint firstItem="DYA-FP-Cd3" firstAttribute="leading" secondItem="NhN-r3-pHL" secondAttribute="trailing" constant="8" id="gaw-yJ-gIw"/>
                     <constraint firstItem="vFh-Ip-qIP" firstAttribute="leading" secondItem="sgc-ol-QRs" secondAttribute="leading" constant="8" id="gfO-ct-2ia"/>
                     <constraint firstItem="yDF-sZ-3mY" firstAttribute="leading" secondItem="DYA-FP-Cd3" secondAttribute="trailing" constant="3" id="gqG-R7-fAV"/>
+                    <constraint firstItem="ey6-EQ-Rg4" firstAttribute="centerX" secondItem="vFh-Ip-qIP" secondAttribute="centerX" id="l9P-aE-Dc6"/>
                     <constraint firstAttribute="bottom" secondItem="nSL-kj-gLK" secondAttribute="bottom" id="tNa-wN-ivl"/>
-                    <constraint firstItem="ey6-EQ-Rg4" firstAttribute="centerX" secondItem="vFh-Ip-qIP" secondAttribute="centerX" id="tiB-YD-OiI"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
